test/errors/type/str/replace5.yasl
mt.lookup('', .replace)(.tr, true, .str)
